gitops/applications/postgres/namespace.yaml
# NOTICE: This code is provided solely for the purpose of completing a hiring assessment.
# Any reuse, distribution, or incorporation into other projects (commercial or non-commercial)
# is strictly prohibited and gives legal ground if abused.
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
